src/objects/Sales_and_Target_channel_business_review__c.object
<CustomObject>
    <fields>
        <fullName>STRCurrent_Year_Hideen__c</fullName>
        <formula>Channel_Partner_Business_Review__r.Joint_Business_Plan__r.Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STRCurrent Year Hideen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <formula>( Sales_Targets_and_Results__r.Current_Year_Currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Review__c</fullName>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Sales and Target channel business review</relationshipLabel>
        <relationshipName>Sales_and_Target_channel_business_review</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <formula>(Sales_Targets_and_Results__r.Forecast_Ongoing_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <formula>Sales_Targets_and_Results__r.Previous_Year_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Sales_Targets_and_Results__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales and Target channel business review</relationshipLabel>
        <relationshipName>Sales_and_Target_channel_business_review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Rate__c</fullName>
        <formula>(Sales_Targets_and_Results__r.Run_Rate_On__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Targets_and_Results__c</fullName>
        <label>Sales Targets and Results</label>
        <referenceTo>Joint_Business_Plan_Product_Lines__c</referenceTo>
        <relationshipLabel>Sales and Target channel business review</relationshipLabel>
        <relationshipName>Sales_and_Target_channel_business_review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>STR_Date_the_actual_sales_YTD_is_giv__c</fullName>
        <formula>Channel_Partner_Business_Review__r.Joint_Business_Plan__r.Date_the_actual_sales_YTD_is_given__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Date the actual sales YTD is given D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Year__c</fullName>
        <formula>Sales_Targets_and_Results__r.Second_Year_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3rd_Year__c</fullName>
        <formula>( Sales_Targets_and_Results__r.Third_Year_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <formula>(Sales_Targets_and_Results__r.Current_Ongoing_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales and Target channel business review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales and Target channel business review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales and Target channel business review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>